[metadata]
name = viewstack
version = file: VERSION
url = https://github.com/pyrustic/viewstack
author = Pyrustic Evangelist
author_email = rusticalex@yahoo.com
maintainer = Pyrustic Evangelist
maintainer_email = rusticalex@yahoo.com
description = Stack-based navigation for Python desktop apps
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    application
    pyrustic
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    viewable

[options.entry_points]
console_scripts =
    viewstack = viewstack.__main__:main
